Bug 445036 - ISO Image Writer fails to write an image to a USB drive with a mounted filesystem, with a message that "The last block was not fully written"
Summary: ISO Image Writer fails to write an image to a USB drive with a mounted filesy...
Status: RESOLVED FIXED
Alias: None
Product: isoimagewriter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: OpenMandriva Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Riddell
URL:
Keywords:
: 474195 479139 500084 519305 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-05 18:41 UTC by Ben Bullard
Modified: 2026-05-20 19:23 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
isoimagewriter in OpenMandriva Lx (45.29 KB, image/jpeg)
2021-11-05 18:49 UTC, Ben Bullard
Details
isoimagewriter error message in OM Lx (21.62 KB, image/jpeg)
2021-11-05 18:50 UTC, Ben Bullard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Bullard 2021-11-05 18:41:46 UTC
SUMMARY
KDE isoimagewrite will not burn .iso file to usb flash drive. 


STEPS TO REPRODUCE
1. InOpenMandriva Lx Cooker or Rolling/Lx 4.3RC with isoimagewriter-0.8-0.20211015.1
2. Try to copy an .iso file to any usb flash drive
3. 

OBSERVED RESULT
$ isoimagewriter
org.kde.isoimagewriter: statusChanged:  KAuth::Action::AuthorizedStatus
org.kde.isoimagewriter: progressStep(QVariantMap) QMap(("error", QVariant(QString, "The last block was not fully written (22,528 of 1,048,576 bytes)!\nAborting.")))
org.kde.isoimagewriter: finished()  0
org.kde.isoimagewriter: finished()  QMap(


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ben Bullard 2021-11-05 18:49:01 UTC
Created attachment 143256 [details]
isoimagewriter in OpenMandriva Lx

I am user knowledge level. I do not know why this occurs, if is the isoimagewriter or something within OpenMandriva's system packages. But we would like to have this tool working. 

Also the previous version isoimagewriter-0.8-0.20210514.1 did work OK. The only issue then was that the verify checksum utility does not work on OM Lx .isos but that is another, less important, issue.

I will do or provide whatever I can to help find the cause of this. I can get in touch with OM devs if needed.

OM's git stuff: https://github.com/OpenMandrivaAssociation/isoimagewriter  >>> obviously OM is doing these packages as git snapshots.
Comment 2 Ben Bullard 2021-11-05 18:50:19 UTC
Created attachment 143257 [details]
isoimagewriter error message in OM Lx
Comment 3 Ben Bullard 2021-11-05 18:52:23 UTC
OpenMandriva issue report: https://github.com/OpenMandrivaAssociation/distribution/issues/2750

This is a confirmed issue at OpenMandriva.
Comment 4 Ben Bullard 2021-11-05 19:01:41 UTC
Looks like I missed some info in my report:

EXPECTED RESULT

That isoimagewriter copies the .iso image to the usb flash drive.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: OpenMandriva Linux 4.3 

KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION

I will admit I wished I knew if this was really an issue with isoimagewriter and not something with some OM Lx system package? Or something like how OM Lx mounts or does not mount flash drives when they are plugged in? I just do not know. But I do know the previous v. OpenMandriva had did work OK.
Comment 5 John Kizer 2023-05-30 18:06:23 UTC
For what it's worth, I got a very similar error in Kubuntu 23.04 - I had to umount /dev/sdb<#>, then it worked
Comment 6 Jeffrey Walton 2023-08-22 23:55:16 UTC
Add a mee too.

I'm using the tip of Master 5011295430dc929742fcdb6d270093e9d1ca78f7, and I encountered "The last block was not fully written (-1 of 1,048,576)". I don't think the first block was written because I get the error immediately.

From the other bug reporter, I found https://invent.kde.org/utilities/isoimagewriter/-/issues/1, which brought me here.

My machine is Kubuntu 22.04.3, x86_64, fully patched. Plasmashell version 5.24.7.

I can provide SSH access to the machine, if needed.
Comment 7 Stephan Sokolow 2023-09-18 05:43:01 UTC
I'm also getting the "-1 of ..." version of the "The last block was not fully written" error immediately after attempting to write an ISO when using the Flatpak build on Kubuntu Linux 20.04 LTS.

Here's the version information:

ssokolow@monolith ~ % lsb_release -a                                                      
No LSB modules are available.
Distributor ID: Ubuntu
Description:    Ubuntu 20.04.6 LTS
Release:        20.04
Codename:       focal
ssokolow@monolith ~ % flatpak --version
Flatpak 1.14.4
ssokolow@monolith ~ % flatpak info org.kde.isoimagewriter                

ISO Image Writer - Write an ISO Image to a USB Disk

          ID: org.kde.isoimagewriter
         Ref: app/org.kde.isoimagewriter/x86_64/stable
        Arch: x86_64
      Branch: stable
     Version: 1.0.0
     License: GPL-3.0
      Origin: flathub
  Collection: org.flathub.Stable
Installation: system
   Installed: 282.1 kB
     Runtime: org.kde.Platform/x86_64/5.15-22.08
         Sdk: org.kde.Sdk/x86_64/5.15-22.08

      Commit: 96c91f5fa16b7457ef19ca40666db735c62d15a80440cfe36419a403b1739255
      Parent: f319418a69ac5668c1a50f84db81e913b627373d2e6b89bf0434ffbb30b698a0
     Subject: fix patch (c417d1f8)
        Date: 2023-05-03 07:50:50 +0000
Comment 8 Sandro Knauß 2024-12-06 11:41:26 UTC
*** Bug 479139 has been marked as a duplicate of this bug. ***
Comment 9 Sandro Knauß 2024-12-06 11:46:58 UTC
Also Windows build is affected by this bug.

It is currently blocking Tails to suggest to use KDE ISO Image writer for creating a Tails USB stick:
https://gitlab.tails.boum.org/tails/tails/-/issues/20452
Comment 10 John Kizer 2025-03-13 04:46:42 UTC
*** Bug 500084 has been marked as a duplicate of this bug. ***
Comment 11 John Kizer 2025-03-13 04:47:47 UTC
*** Bug 474195 has been marked as a duplicate of this bug. ***
Comment 12 John Kizer 2025-03-13 05:11:06 UTC
I can reproduce with ISO Image Writer 24.12.3 on Fedora KDE 41 - updating the title to include the part about mounted filesystems, as that seems to be the key factor?
Comment 13 superwaliz623 2025-04-18 23:35:45 UTC
I found if you completely wipe the usb (such that is doesn't even have a file system) before writing an image to it, it'll write the image without complaint
Comment 14 superwaliz623 2025-04-18 23:37:00 UTC
(In reply to superwaliz623 from comment #13)
> I found if you completely wipe the usb (such that is doesn't even have a
> file system) before writing an image to it, it'll write the image without
> complaint

That is on Kubuntu version 24.10 running the flatpak
Comment 15 Robert Griffiths 2025-08-25 20:43:57 UTC
Same here on KDE Linux, with flatpak ISO Image Writer, can confirm that removing all partitions on the USB allowed it to be written.
Comment 16 Justin Zobel 2026-04-24 07:57:01 UTC
*** Bug 519305 has been marked as a duplicate of this bug. ***
Comment 17 Bug Janitor Service 2026-04-24 09:31:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/isoimagewriter/-/merge_requests/60
Comment 18 Hadi Chokr 2026-05-20 19:23:02 UTC
Git commit e822828337502f3ad81cdb5efc865618152397dc by Hadi Chokr.
Committed on 11/05/2026 at 15:41.
Pushed by ngraham into branch 'master'.

imagewriter: unmount partitions via UDisks2 on Linux/FreeBSD before writing

Iterate over all UDisks2-managed objects and unmount each one that exposes the
Filesystem interface before opening the device for writing.

M  +47   -2    isoimagewriter/imagewriter.cpp

https://invent.kde.org/utilities/isoimagewriter/-/commit/e822828337502f3ad81cdb5efc865618152397dc