imagewriter: unmount partitions via UDisks2 on Linux/FreeBSD before writing

Iterate over all UDisks2-managed objects and unmount each one that exposes the
Filesystem interface before opening the device for writing.

BUG: 445036